--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Search</title>
+  <title>澄海区档案局查询</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
