完成先行文件服务模块，完善导航激活问题

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>澄海区档案局查询</title>
+  <title>澄海区档案局查询终端</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/2.ico">
 </head>
 
 <body>
   <app-root></app-root>
-  <!-- <script src="https://use.fontawesome.com/a9ef5abc70.js"></script> -->
 </body>
 
 </html>
