--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/img/2.ico">
   <!-- Polyfills -->
-  <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload-shim.min.js"></script> -->
 
   <!-- Update these package versions as needed -->
-  <script src="https://unpkg.com/zone.js@0.8.4?main=browser"></script>
-  <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.8.18/zone.min.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.19/system.js"></script> -->
 
   <!-- This SystemJS configuration loads umd packages from the web -->
-  <script src="systemjs.config.server"></script>
+  <!-- <script src="systemjs.config.server"></script> -->
 
   <script>
     System.import('main.js')
