剩下ueditor的setContent的bug修复

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
 
 <body>
   <app-root></app-root>
+  <script src="./assets/ueditor/ueditor.config.js"></script>
+  <script src="./assets/ueditor/ueditor.all.min.js"></script>
 </body>
 
 </html>
