--- a/src/index.html
+++ b/src/index.html
@@ -6,28 +6,14 @@
   <title>澄海区档案局查询终端</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/img/2.ico">
-  <!-- Polyfills -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload-shim.min.js"></script> -->
-
-  <!-- Update these package versions as needed -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.8.18/zone.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.19/system.js"></script> -->
-
-  <!-- This SystemJS configuration loads umd packages from the web -->
-  <!-- <script src="systemjs.config.server"></script> -->
-
-  <script>
-    System.import('main.js')
-      .catch(function (err) { console.error(err); });
-  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <link rel="icon " type="image/x-icon " href="./assets/img/2.ico ">
 </head>
 
 <body>
   <app-root></app-root>
-  <script src="./assets/ueditor/ueditor.config.js"></script>
-  <script src="./assets/ueditor/ueditor.all.min.js"></script>
+  <script src="./assets/ueditor/ueditor.config.js "></script>
+  <script src="./assets/ueditor/ueditor.all.min.js "></script>
 </body>
 
 </html>
